--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,8 @@ position: absolute;bottom:8%;left:25%;line-height:3.5rem;animation:fadeto 4s;bor
     background: -o-linear-gradient(right, #55d1ad, #a3d9f5); /* Opera 11.1 - 12.0 */
     background: -moz-linear-gradient(right, #55d1ad, #a3d9f5); /* Firefox 3.6 - 15 */
     background: linear-gradient(to right, #55d1ad , #a3d9f5); /* 标准的语法（必须放在最后） */}
+.canvas{width:100%;height:15rem;}
+#can{width:100%;height:100%;}
 input[type=search], input[type=text], input[type=password], input[type=datetime], input[type=datetime-local], input[type=date], input[type=month], input[type=time], input[type=week], input[type=number], input[type=email], input[type=url], input[type=tel], input[type=color], textarea{display:inline-block;}
 
 /*job_quality*/
@@ -283,7 +285,8 @@ input[type=search], input[type=text], input[type=password], input[type=datetime]
 .result_ul li{text-align:center; font-size:1.7rem; color:#1d3462; line-height:7.35rem;}
 .result_list li{height:6.3rem; line-height:6.3rem; text-align:center; font-size:1.3rem; color:#606060;}
 .result_list li:last-child{border-bottom:none;}
-.result_grade2{position:relative;}
+.result_grade2{position:relative;width:100%;height:20rem;}
+#can1{width:100%;height:85%}
 .result_grade2 .result_back{width:100%; height:4.2rem; background:#2da795; text-align:center; position:absolute; left:0; bottom:0; font-size:5rem; color:#fff;}
 
 /*share*/
