--- a/views/result/result.html
+++ b/views/result/result.html
@@ -16,13 +16,16 @@
 	    		<div class="result_pic fl"><img src="images/set/result01.png"></div>
 	    		<h4>专业成绩</h4>
 	    	</div>
-	    	<div ui-sref="tabs.share"><img src="images/set/result_grade01.jpg"></div>
+	    	<div class="canvas" ui-sref="tabs.share"><canvas width="" height="" id="can"></canvas></div>
 	    	<div class="result_title">
 	    		<div class="result_pic fl"><img src="images/set/result02.png"></div>
 	    		<h4>职业素质分</h4>
 	    	</div>
 	    	<div class="box_s" ui-sref="tabs.job_quality"><div class="box-in"></div></div>
-	    	<div class="result_grade2"><img src="images/set/result_grade02.jpg"><div class="result_back"><i ui-sref="tabs.home" class="ion ion-ios-arrow-up"></i></div></div>
+	    	<div class="result_grade2">
+				<canvas id="can1" class="canvas" width="360" height="300"></canvas>
+				<div class="result_back"><i ui-sref="tabs.home" class="ion ion-ios-arrow-up"></i></div>
+			</div>
 	    </div>
     </ion-content>
 </ion-view>
